@@ -1,5 +1,6 @@
 Changes for 1.6.3
 
+ - [DEV-268] added support of <mode> for system.cpu.util under Solaris (Sasha)
  - [ZBX-737] the behaviour of the agent's key "vfs.fs.size" improved to be similar to the "df" command (Dmitry)
  - [ZBX-599] the purpose of the configuration parameter StartAgents precised (Dmitry)
  - [ZBX-756] added tooltip in "status of ZABBIX" report for number of items and triggers parameter (Vedmak)
